<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/application_settings"
         />
    <item
        android:id="@+id/action_mod3dr_settings"
        android:orderInCategory="100"
        android:title="3DR settings..."
         />
    <item
        android:id="@+id/action_help"
        android:orderInCategory="100"
        android:title="@string/help"
        />
    <item
        android:id="@+id/action_bluetooth"
        android:orderInCategory="100"
        android:title="@string/bluetooth_device"
         />
    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
         />
</menu>