<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txtViewTab3Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"
        android:text="@string/general"
        android:textSize="18sp" />
    <TextView
        android:id="@+id/txtAltimeterName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewTab3Title"

        android:layout_marginTop="28dp"
        android:text="@string/alti_name" />

    <TextView
        android:id="@+id/txtAltiNameValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/txtAltimeterName"
        android:text="" />

    <TextView
        android:id="@+id/txtAltiUnit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtAltimeterName"
        android:text="@string/units" />

    <Spinner
        android:id="@+id/spinnerUnit"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/txtAltiUnit"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/txtBeepFrequency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/txtAltiUnit"
        android:layout_marginTop="18dp"
        android:text="@string/beep_freq" />

    <EditText
        android:id="@+id/editTxtBipFreq"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignBaseline="@+id/txtBeepFrequency"
        android:inputType="number"
        android:singleLine="true"
        android:text="100"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/baudrate"
        android:id="@+id/txtViewBaudRate"
        android:layout_below="@+id/txtBeepFrequency"
        android:layout_marginTop="18dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerBaudRate"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewBaudRate"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/txtViewAltimeterResolution"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewBaudRate"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginStart="0dp"
        android:layout_marginLeft="0dp"
        android:layout_marginTop="15dp"
        android:text="@string/altimeterresolution" />

    <Spinner
        android:id="@+id/spinnerAltimeterResolution"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewAltimeterResolution"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />

       <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eepromsize"
        android:id="@+id/txtViewEEpromSize"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewAltimeterResolution"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerEEpromSize"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewEEpromSize"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/endrecordaltitude"
        android:id="@+id/txtViewEndRecordAltitude"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewEEpromSize"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTxtEndRecordAltitude"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewEndRecordAltitude"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/launch_detect"
        android:id="@+id/txtViewLaunchDetect"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewEndRecordAltitude"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerLaunchDetect"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewLaunchDetect"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/gyro_range"
        android:id="@+id/txtViewGyroRange"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewLaunchDetect"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerGyroRange"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewGyroRange"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/accelero_range"
        android:id="@+id/txtViewAcceleroRange"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewGyroRange"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Spinner
        android:id="@+id/spinnerAcceleroRange"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewAcceleroRange"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:id="@+id/txtViewBatteryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewAcceleroRange"
        android:text="@string/BatteryType" />

    <Spinner
        android:id="@+id/spinnerBatteryType"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewBatteryType"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/recording_timeout_sec"
        android:id="@+id/txtViewRecordingTimeOut"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewBatteryType"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTxtRecordingTimeOut"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewRecordingTimeOut"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txtViewTelemetryType"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewRecordingTimeOut"
        android:text="Telemetry type"
        />

    <Spinner
        android:id="@+id/spinnerTelemetryType"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/txtViewTelemetryType"
        android:layout_alignParentRight="true"
        android:spinnerMode="dropdown" />
</RelativeLayout>