<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <TextView
        android:id="@+id/txtViewTab3-1Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center_horizontal"

        android:text="@string/servo"
        android:layout_marginTop="28dp"
        android:textSize="36sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servo_x_min"
        android:id="@+id/txtViewServoXMin"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewTab3-1Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTxtServoXMin"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtViewServoXMin"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servo_x_max"
        android:id="@+id/txtViewServoXMax"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewServoXMin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTxtServoXMax"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtViewServoXMax"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servo_y_min"
        android:id="@+id/txtViewServoYMin"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewServoXMax"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTxtServoYMin"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtViewServoYMin"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="13sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/servo_y_max"
        android:id="@+id/txtViewServoYMax"
        android:layout_marginTop="18dp"
        android:layout_below="@+id/txtViewServoYMin"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editTxtServoYMax"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtViewServoYMax"
        android:layout_alignParentRight="true"
        android:inputType="number"
        android:textAlignment="textEnd"
        android:textSize="13sp" />
</RelativeLayout>