<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical">

    <TextView
        android:id="@+id/txtViewStatusTab2Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:elegantTextHeight="true"
        android:fontFamily="sans-serif-black"
        android:gravity="center"
        android:text="@string/other_sensors"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/txtTemperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtViewStatusTab2Title"
        android:layout_marginTop="40dp"
        android:text="@string/temperature_c" />

    <TextView
        android:id="@+id/txtTempValue"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtTemperature"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:text="100"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txtPressure"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtTemperature"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:text="@string/pressure_mbar" />

    <TextView
        android:id="@+id/txtPressureValue"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtPressure"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:text="100"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="13sp" />

    <TextView
        android:id="@+id/txtAltitude"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtPressure"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:text="@string/altitude_meters" />

    <TextView
        android:id="@+id/txtAltitudeValue"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtAltitude"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:text="100"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="13sp" />
    <TextView
        android:id="@+id/txtBatteryVoltage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAltitude"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_marginTop="18dp"
        android:text="@string/battery_voltage_v" />

    <TextView
        android:id="@+id/txtBatteryVoltageValue"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/txtBatteryVoltage"
        android:layout_alignParentEnd="true"
        android:ems="10"
        android:inputType="number"
        android:singleLine="true"
        android:text="100"
        android:textAlignment="textEnd"
        android:textIsSelectable="false"
        android:textSize="13sp" />




</RelativeLayout>